# stackscope

./: .gitignore  PRODUCT_SPEC.md  README.md  pyproject.toml
.codex/: config.toml
docs/: blueprint-model.md  blueprint.schema.json  v1-scope.md  vision.md
examples/sample-app/: .env.example  blueprint.json  bundle.json  docker-compose.yml  package.json  view.json
examples/sample-app/.github/workflows/: ci.yml
examples/sample-app/infra/: main.tf
examples/sample-app/k8s/: deployment.yaml
examples/sample-app/nginx/: nginx.conf
src/stackscope/: __init__.py  cli.py  model.py  persistence.py  renderers.py  scanners.py  utils.py
tests/: test_stackscope.py
