[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stackscope"
version = "0.1.0"
description = "Lightweight architecture discovery and blueprinting CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stackscope" }]
dependencies = []

[project.scripts]
stackscope = "src.stackscope.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
